# example-modules

./: README.md
CommunityDays-Schedule/: CHANGELOG.md  CMakeLists.txt  README.md
CommunityDays-Schedule/examples/CommunityDaysSchedule/: index.json
CommunityDays-Schedule/examples/CommunityDaysSchedule/project/: communitydays.gtmod  project.gtlab
CommunityDays-Schedule/src/: CMakeLists.txt  cd_communitydays.cpp  cd_communitydays.h
CommunityDays-Schedule/src/data/: cd_break.cpp  cd_break.h  cd_package.cpp  cd_package.h  cd_session.cpp  cd_session.h  cd_talk.cpp  cd_talk.h
CommunityDays-Schedule/src/ui/: cd_packageui.cpp  cd_packageui.h
